# jobscrape_api

./: .gitignore  docker-compose.yml  dockerfile  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
api/example/: controller.py
api/jobs/: controller.py  endpoint.py
api/search/: config.py  controller.py  endpoint.py
embedding/: sentence_embedding.py
shared/: models.py
